<resources>
    <string name="app_name">My Little Gift Shop</string>
    <string name="app_descrip">%1$s it\'s a practice mobile app about a gift shop..</string>
    <string name="app_credits">%1$s Version %2$s still on development by Bernardo Pérez.</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_general">General</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_show_products">Go Shopping!</string>
    <string name="menu_show_shopping_cart">View cart</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_about">About</string>
    <string name="menu_send">Send</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_admin">Administration</string>
    <string name="menu_users">Users</string>
    <string name="menu_products">Products</string>
    <string name="menu_login">Log in</string>

    <string name="msg_exit">You are about to quit application</string>
    <string name="msg_sure_exit">Are you sure you want to exit?</string>

    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>

    <string name="title_login">Log In</string>
    <string name="title_register">Register</string>
    <string name="title_admin">Administration</string>

    <string name="title_new">New %1$s</string>
    <string name="title_edit">Edit %1$s</string>

    <string name="title_username_management">Users management</string>
    <string name="title_category_management">Categories management</string>
    <string name="title_products_management">Products management</string>

    <string name="lbl_login">Login</string>
    <string name="lbl_username">Username:</string>
    <string name="lbl_password">Password:</string>
    <string name="lbl_product_name">Product name:</string>
    <string name="lbl_price">Price ($):</string>
    <string name="lbl_price2">Price ($)</string>
    <string name="lbl_description">Description:</string>
    <string name="lbl_user_level">Access level:</string>
    <string name="lbl_categories">Categories:</string>
    <string name="lbl_image">Image:</string>
    <string name="lbl_logged">Logged!</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_full_name">Full name:</string>
    <string name="lbl_category_name">Category name:</string>
    <string name="lbl_add">+ Add record</string>
    <string name="lbl_add_to_cart">&#8680;</string>
    <string name="lbl_actions">Actions</string>

    <string name="hint_username">Enter username</string>
    <string name="hint_password">Enter password</string>


    <string name="validation_error_1">Write a username</string>
    <string name="validation_error_2">Write a password</string>
    <string name="validation_error_3">Username/Password doesn\'t match, please try again</string>
    <string name="validation_error_4">Select or take a picture for the product</string>
    <string name="validation_verify_value">Please verify value of %1$s</string>

    <string name="icon_edit">&#x270E;</string>
    <string name="icon_delete">&#x1F5D1;</string>

    <string name="msg_created">Created!</string>
    <string name="msg_updated">Updated!</string>
    <string name="msg_deleted">Deleted!</string>
    <string name="msg_sure_delete">Are you sure you want to delete?</string>

    <string name="title_deleting">Deleting record...</string>

    <string name="msg_action_select">Select one:</string>
    <string name="msg_from_gallery">Select from gallery</string>
    <string name="msg_from_camera">Take a picture</string>



</resources>
