<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_menu_key"
        android:title="@string/menu_login" />

    <item
        android:id="@+id/nav_show_products"
        android:icon="@drawable/ic_menu_shop"
        android:title="@string/menu_show_products" />

    <item
        android:id="@+id/nav_show_cart"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_show_products" />

    <item android:title="@string/menu_admin">
        <menu>
            <item
                android:id="@+id/nav_admin_products"
                android:icon="@drawable/ic_menu_gift"
                android:title="@string/menu_products" />
            <item
                android:id="@+id/nav_admin_users"
                android:icon="@drawable/ic_menu_users"
                android:title="@string/menu_users" />
        </menu>
    </item>

    <item android:title="@string/menu_general">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
