<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_ll"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/module_title"
        android:text="@string/title_username_management"
        android:id="@+id/title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            style="@style/label.right"
            android:text="@string/lbl_full_name"
            />

        <EditText
            style="@style/input_fld.text"
            android:id="@+id/txt_full_name"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            style="@style/label.right"
            android:text="@string/lbl_username"
            />

        <EditText
            style="@style/input_fld.text"
            android:id="@+id/txt_username"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            style="@style/label.right"
            android:text="@string/lbl_password"
            />

        <EditText
            style="@style/input_fld.password"
            android:id="@+id/txt_password"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            style="@style/label.right"
            android:text="@string/lbl_user_level"
            />

        <Spinner
            style="@style/spinner_fld"
            android:id="@+id/cbo_level"
            >
        </Spinner>
    </LinearLayout>

    <include layout="@layout/buttons" />

</LinearLayout>